fix(style): selector button had too high z-index for slider

--- a/app/styles/gallery.css
+++ b/app/styles/gallery.css
@@ -77,7 +77,7 @@
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
   opacity: 1;
-  z-index: 30;
+  z-index: 10;
 }
 .loaded span.selector:hover,
 .cockpit span.selector:hover {
